# devfinops-flet-app

./: Dockerfile  app.py  pyproject.toml
k8s/: application.yaml  deployment.yaml  namespace.yaml  service.yaml
